# TUI-Editor

./: Cargo.toml  README.md
src/: app.rs  border.rs  cmdline.rs  cursor.rs  filesystem.rs  lualine.rs  main.rs  screens.rs  state.rs  utils.rs  widgets.rs
src/filesystem/: file.rs  folder.rs  tree.rs
src/screens/: alpha.rs  editor.rs
src/state/: config.rs  events.rs  filesystem.rs
src/state/filesystem/: file.rs  folder.rs
src/widgets/: border.rs  cmdline.rs  filetree.rs  lualine.rs  pane.rs  panes.rs
