[package]
name = "tui-editor"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.58", features = ["derive"] }
crossterm = "0.29.0"
log = "0.4.29"
ratatui = "0.30.0"
ropey = "1.6.1"
simplelog = "0.12.2"

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
strip = true
